syntax = "proto3";

option go_package = "server/pkg/network/protocol;protocol";

message Packet {
  uint32 id = 1;
  oneof payload {
    LoginRequest login_request = 2;
    LoginResponse login_response = 3;
    RegisterRequest register_request = 4;
    RegisterResponse register_response = 5;
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}
message LoginResponse {
  bool ok = 1;
  string msg = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}
message RegisterResponse {
  bool ok = 1;
  string msg = 2;
}
